RESOLVED FIXED14495
REGRESSION: Wrong cursor is displayed during drag and drop when text is selected
https://bugs.webkit.org/show_bug.cgi?id=14495
Summary REGRESSION: Wrong cursor is displayed during drag and drop when text is selected
Miroslav Juhos
Reported 2007-07-02 03:37:01 PDT
Overview Description: Wrong cursor is displayed during drag and drop when text is selected Steps to Reproduce: 1) Open test case 2) Select text in yellow box 3) Move using drag'n'drop blue box Actual Results: Text cursor is displayed as mouse cursor. Expected Results: Mouse cursor will be "default" thus arrow Build Date & Platform: WebKit r23922 on WinXP Safari 3.0 (5222.8.3) on Mac OS 10.5. (9A466) Additional Information: On Safari 2.0.4 (419.3) test case works correctly. Test case: <html> <style> * { cursor:default; } div { position:absolute; width:100px; height:100px; } </style> <script> var allowMove = false; var movable; onload = function() { movable = document.getElementById('movable'); movable.onmousedown = function() { allowMove = true; return false; } } onmouseup = function(event) {allowMove = false;} onmousemove = function(event) { if (allowMove) { movable.style.top = event.clientY + 10 + 'px'; movable.style.left = event.clientX + 10 + 'px'; } } </script> <body> <div style="background-color:blue;left:100px;position:absolute" id="movable"></div> <div style="background-color:yellow;left:300px;">Select me</div> </body> </html>
Attachments
Test case (773 bytes, text/html)
2007-07-02 03:37 PDT, Miroslav Juhos
no flags
Don't change the cursor to an I-beam unconditionally if selection is impossible (5.10 KB, patch)
2007-07-03 12:04 PDT, mitz
mjs: review+
Miroslav Juhos
Comment 1 2007-07-02 03:37:51 PDT
Created attachment 15347 [details] Test case
Alexey Proskuryakov
Comment 2 2007-07-02 03:56:42 PDT
Confirmed as a regression with r23841.
mitz
Comment 3 2007-07-03 12:04:37 PDT
Created attachment 15372 [details] Don't change the cursor to an I-beam unconditionally if selection is impossible
Maciej Stachowiak
Comment 4 2007-07-04 03:30:39 PDT
Comment on attachment 15372 [details] Don't change the cursor to an I-beam unconditionally if selection is impossible r=me
Mark Rowe (bdash)
Comment 5 2007-07-04 03:55:50 PDT
Mark Rowe (bdash)
Comment 6 2007-07-04 03:57:30 PDT
Landed in r23983.
Note You need to log in before you can comment on or make changes to this bug.